--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>BizNews - Free News Website Template</title>
+    <title>MieChat</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -100,12 +100,20 @@
                     <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="category.html" class="nav-item nav-link">Category</a>
                     <a href="single.html" class="nav-item nav-link">Single News</a>
-                    <div class="nav-item dropdown">
+                    <!-- <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Dropdown</a>
                         <div class="dropdown-menu rounded-0 m-0">
                             <a href="#" class="dropdown-item">Menu item 1</a>
                             <a href="#" class="dropdown-item">Menu item 2</a>
                             <a href="#" class="dropdown-item">Menu item 3</a>
+                        </div>
+                    </div> -->
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Jadwal</a>
+                        <div class="dropdown-menu rounded-0 m-0">
+                            <a href="#" class="dropdown-item">Jadwal SepakBola</a>
+                            <a href="#" class="dropdown-item">Jadwal MotoGP</a>
+                            <a href="#" class="dropdown-item">Jadwal Badminton</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link active">Contact</a>
@@ -335,10 +343,10 @@
         </div>
     </div>
     <div class="container-fluid py-4 px-sm-3 px-md-5" style="background: #111111;">
-        <p class="m-0 text-center">&copy; <a href="#">Your Site Name</a>. All Rights Reserved. 
+        <!-- <p class="m-0 text-center">&copy; <a href="#">Your Site Name</a>. All Rights Reserved.  -->
 		
 		<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-		Design by <a href="https://htmlcodex.com">HTML Codex</a></p>
+		<!-- Design by <a href="https://htmlcodex.com">HTML Codex</a></p> -->
     </div>
     <!-- Footer End -->
 
