--- a/single.html
+++ b/single.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>BizNews - Free News Website Template</title>
+    <title>MieChat</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -100,12 +100,20 @@
                     <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="category.html" class="nav-item nav-link">Category</a>
                     <a href="single.html" class="nav-item nav-link active">Single News</a>
-                    <div class="nav-item dropdown">
+                    <!-- <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Dropdown</a>
                         <div class="dropdown-menu rounded-0 m-0">
                             <a href="#" class="dropdown-item">Menu item 1</a>
                             <a href="#" class="dropdown-item">Menu item 2</a>
                             <a href="#" class="dropdown-item">Menu item 3</a>
+                        </div>
+                    </div> -->
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Jadwal</a>
+                        <div class="dropdown-menu rounded-0 m-0">
+                            <a href="#" class="dropdown-item">Jadwal SepakBola</a>
+                            <a href="#" class="dropdown-item">Jadwal MotoGP</a>
+                            <a href="#" class="dropdown-item">Jadwal Badminton</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -134,8 +142,10 @@
                         </div>
                         <div class="owl-carousel tranding-carousel position-relative d-inline-flex align-items-center bg-white border border-left-0"
                             style="width: calc(100% - 180px); padding-right: 100px;">
-                            <div class="text-truncate"><a class="text-secondary text-uppercase font-weight-semi-bold" href="">Lorem ipsum dolor sit amet elit. Proin interdum lacus eget ante tincidunt, sed faucibus nisl sodales</a></div>
-                            <div class="text-truncate"><a class="text-secondary text-uppercase font-weight-semi-bold" href="">Lorem ipsum dolor sit amet elit. Proin interdum lacus eget ante tincidunt, sed faucibus nisl sodales</a></div>
+                            <!-- <div class="text-truncate"><a class="text-secondary text-uppercase font-weight-semi-bold" href="">Lorem ipsum dolor sit amet elit. Proin interdum lacus eget ante tincidunt, sed faucibus nisl sodales</a></div>
+                            <div class="text-truncate"><a class="text-secondary text-uppercase font-weight-semi-bold" href="">Lorem ipsum dolor sit amet elit. Proin interdum lacus eget ante tincidunt, sed faucibus nisl sodales</a></div> -->
+                            <div class="text-truncate"><a class="text-secondary text-uppercase font-weight-semi-bold" href="https://sport.detik.com/sepakbola/bola-dunia/d-7044270/messi-menangi-ballon-dor-mbappe-no-debat">Messi Menangi Ballon d'Or, Mbappe No Debat</a></div>
+                            <div class="text-truncate"><a class="text-secondary text-uppercase font-weight-semi-bold" href="https://sport.detik.com/sepakbola/liga-indonesia/d-7044972/jacksen-f-tiago-piala-dunia-u-17-bikin-kagum-orang-brasil">Jacksen F Tiago: Piala Dunia U-17 Bikin Kagum Orang Brasil!</a></div>
                         </div>
                     </div>
                 </div>
@@ -152,39 +162,31 @@
                 <div class="col-lg-8">
                     <!-- News Detail Start -->
                     <div class="position-relative mb-3">
-                        <img class="img-fluid w-100" src="img/news-700x435-1.jpg" style="object-fit: cover;">
+                        <img class="img-fluid w-100" src="imgg/bola/1.jpeg" style="object-fit: cover;">
                         <div class="bg-white border border-top-0 p-4">
                             <div class="mb-3">
                                 <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                    href="">Business</a>
-                                <a class="text-body" href="">Jan 01, 2045</a>
+                                    href="">Piala Dunia U-17</a>
+                                <a class="text-body" href="">19 Nov 2023</a>
                             </div>
-                            <h1 class="mb-3 text-secondary text-uppercase font-weight-bold">Lorem ipsum dolor sit amet elit vitae porta diam...</h1>
-                            <p>Sadipscing labore amet rebum est et justo gubergren. Et eirmod ipsum sit diam ut
-                                magna lorem. Nonumy vero labore lorem sanctus rebum et lorem magna kasd, stet
-                                amet magna accusam consetetur eirmod. Kasd accusam sit ipsum sadipscing et at at
-                                sanctus et. Ipsum sit gubergren dolores et, consetetur justo invidunt at et
-                                aliquyam ut et vero clita. Diam sea sea no sed dolores diam nonumy, gubergren
-                                sit stet no diam kasd vero.</p>
-                            <p>Voluptua est takimata stet invidunt sed rebum nonumy stet, clita aliquyam dolores
-                                vero stet consetetur elitr takimata rebum sanctus. Sit sed accusam stet sit
-                                nonumy kasd diam dolores, sanctus lorem kasd duo dolor dolor vero sit et. Labore
-                                ipsum duo sanctus amet eos et. Consetetur no sed et aliquyam ipsum justo et,
-                                clita lorem sit vero amet amet est dolor elitr, stet et no diam sit. Dolor erat
-                                justo dolore sit invidunt.</p>
-                            <h3 class="text-uppercase font-weight-bold mb-3">Lorem ipsum dolor sit amet elit</h3>
-                            <img class="img-fluid w-50 float-left mr-4 mb-2" src="img/news-800x500-1.jpg">
-                            <p>Diam dolor est labore duo invidunt ipsum clita et, sed et lorem voluptua tempor
-                                invidunt at est sanctus sanctus. Clita dolores sit kasd diam takimata justo diam
-                                lorem sed. Magna amet sed rebum eos. Clita no magna no dolor erat diam tempor
-                                rebum consetetur, sanctus labore sed nonumy diam lorem amet eirmod. No at tempor
-                                sea diam kasd, takimata ea nonumy elitr sadipscing gubergren erat. Gubergren at
-                                lorem invidunt sadipscing rebum sit amet ut ut, voluptua diam dolores at
-                                sadipscing stet. Clita dolor amet dolor ipsum vero ea ea eos. Invidunt sed diam
-                                dolores takimata dolor dolore dolore sit. Sit ipsum erat amet lorem et, magna
-                                sea at sed et eos. Accusam eirmod kasd lorem clita sanctus ut consetetur et. Et
-                                duo tempor sea kasd clita ipsum et.</p>
-                            <h5 class="text-uppercase font-weight-bold mb-3">Lorem ipsum dolor sit amet elit</h5>
+                            <h1 class="mb-3 text-secondary text-uppercase font-weight-bold">Jacksen F Tiago: Piala Dunia U-17 Bikin Kagum Orang Brasil!</h1>
+                            <p>Piala Dunia U-17 2023 sudah berlangsung di Indonesia. Mantan pelatih Timnas Indonesia, Jacksen F Tiago, bilang orang-orang di negara asalnya, Brasil, kagum dengan tanah air.
+                                Piala Dunia U-17 2023 berlangsung pada 10 November sampai 2 Desember 2023. Saat ini, kompetisi sudah menyelesaikan fase grup.
+                                Sebanyak 36 pertandingan digelar di empat venue. Stadion Gelora Bung Tomo, Stadion Manahan, Stadion Si Jalak Harupat, dan Stadion Internasional Jakarta yang menjadi tempat berlangsungnya laga.
+                                Timnas Brasil berlaga di Jakarta. Pelatih Brasil, Phelipe Leal, sempat mengungkap bahwa dirinya tak mengira kondisi JIS begitu bagus.
+                                </p>
+                            <p>Jacksen saat ini masih tinggal di Indonesia. Bahkan, putranya, Hugo Samir, menjadi pemain Timnas Indonesia, sudah berlaga di tim U-20 dan U-23.
+                                Selama perhelatan Piala Dunia U-17, Jacksen mengaku mendapat pesan singkat dari koleganya di tanah kelahiran.
+                                "Saya bisa menjadi saksi akhirnya Indonesia mampu membawa Piala Dunia ke negara ini, meskipun U-17. Ini harus disyukuri. Kawan-kawan di Brasil hampir setiap hari kirim WA, kagum dengan stadion dan bangsa Indonesia bisa menggelar Piala Dunia dengan begitu luar biasa," kata Jacksen seperti diberitakan detikJatim.
+                                "Kita harus memberi pujian kepada seluruh pelaku sepakbola yang terlibat mulai dari pemain, media, suporter, dan pemerintah Indonesia yang melakukan gerakan luar biasa. Dengan piala dunia ini, anak-anak usia 5, 6, 7 tahun saya yakin akan punya cita-cita mewakili bangsa Indonesia lewat sepakbola," sambungnya.</p>
+                            <!-- <h3 class="text-uppercase font-weight-bold mb-3">Lorem ipsum dolor sit amet elit</h3>
+                            <img class="img-fluid w-50 float-left mr-4 mb-2" src="img/news-800x500-1.jpg"> -->
+                            <p>Jacksen datang dari Brasil ke Indonesia sebagai pemain hingga jadi pelatih. Dia termasuk sosok yang bergelimang prestasi. Pada 2013, dia berkesempatan melatih Timnas Indonesia meski berjalan singkat.
+
+                                Pria berusia 54 tahun ini menegaskan Piala Dunia U-17 2023 menjadi momen penting sekaligus inspirasi bagi banyak anak-anak Indonesia. Pengalaman berharga pemain diharapkan bisa menjadi modal berharga untuk bersaing di level internasional.
+                                
+                                "Saya seorang pelaku sepakbola Indonesia mengamati semua penilaian dari wartawan, teman-teman pelatih, atau pemain. Saya meskipun lama di Indonesia, tetap mengamati dari sudut pandang orang asing, karena saya masih berpaspor Brasil," katanya.</p>
+                            <!-- <h5 class="text-uppercase font-weight-bold mb-3">Lorem ipsum dolor sit amet elit</h5>
                             <img class="img-fluid w-50 float-right mr-4 mb-2" src="img/news-800x500-2.jpg">
                             <p>Diam dolor est labore duo invidunt ipsum clita et, sed et lorem voluptua tempor
                                 invidunt at est sanctus sanctus. Clita dolores sit kasd diam takimata justo diam
@@ -196,7 +198,7 @@
                                 dolores takimata dolor dolore dolore sit. Sit ipsum erat amet lorem et, magna
                                 sea at sed et eos. Accusam eirmod kasd lorem clita sanctus ut consetetur et. Et
                                 duo tempor sea kasd clita ipsum et. Takimata kasd diam justo est eos erat
-                                aliquyam et ut.</p>
+                                aliquyam et ut.</p> -->
                         </div>
                         <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
                             <div class="d-flex align-items-center">
@@ -331,7 +333,7 @@
                             <h4 class="m-0 text-uppercase font-weight-bold">Advertisement</h4>
                         </div>
                         <div class="bg-white text-center border border-top-0 p-3">
-                            <a href=""><img class="img-fluid" src="img/news-800x500-2.jpg" alt=""></a>
+                            <a href=""><img class="img-fluid" src="imgg/bola/lionel-messi-1_169.jpeg" alt=""></a>
                         </div>
                     </div>
                     <!-- Ads End -->
@@ -535,10 +537,10 @@
         </div>
     </div>
     <div class="container-fluid py-4 px-sm-3 px-md-5" style="background: #111111;">
-        <p class="m-0 text-center">&copy; <a href="#">Your Site Name</a>. All Rights Reserved. 
+        <!-- <p class="m-0 text-center">&copy; <a href="#">Your Site Name</a>. All Rights Reserved.  -->
 		
 		<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-		Design by <a href="https://htmlcodex.com">HTML Codex</a></p>
+		<!-- Design by <a href="https://htmlcodex.com">HTML Codex</a></p> -->
     </div>
     <!-- Footer End -->
 
