--- a/category.html
+++ b/category.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>BizNews - Free News Website Template</title>
+    <title>MieChat</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -100,12 +100,20 @@
                     <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="category.html" class="nav-item nav-link active">Category</a>
                     <a href="single.html" class="nav-item nav-link">Single News</a>
-                    <div class="nav-item dropdown">
+                    <!-- <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Dropdown</a>
                         <div class="dropdown-menu rounded-0 m-0">
                             <a href="#" class="dropdown-item">Menu item 1</a>
                             <a href="#" class="dropdown-item">Menu item 2</a>
                             <a href="#" class="dropdown-item">Menu item 3</a>
+                        </div>
+                    </div> -->
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Jadwal</a>
+                        <div class="dropdown-menu rounded-0 m-0">
+                            <a href="#" class="dropdown-item">Jadwal SepakBola</a>
+                            <a href="#" class="dropdown-item">Jadwal MotoGP</a>
+                            <a href="#" class="dropdown-item">Jadwal Badminton</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -131,20 +139,20 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="section-title">
-                                <h4 class="m-0 text-uppercase font-weight-bold">Category: Business</h4>
+                                <h4 class="m-0 text-uppercase font-weight-bold">Category: Sepak Bola</h4>
                                 <a class="text-secondary font-weight-medium text-decoration-none" href="">View All</a>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative mb-3">
-                                <img class="img-fluid w-100" src="img/news-700x435-1.jpg" style="object-fit: cover;">
+                                <img class="img-fluid w-100" src="imgg/bola/argentina.jpeg" style="object-fit: cover;">
                                 <div class="bg-white border border-top-0 p-4">
                                     <div class="mb-2">
                                         <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                            href="">Business</a>
-                                        <a class="text-body" href=""><small>Jan 01, 2045</small></a>
+                                            href="">Football News</a>
+                                        <a class="text-body" href=""><small>Nov 17, 2023</small></a>
                                     </div>
-                                    <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
+                                    <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold" href="https://sport.detik.com/sepakbola/bola-dunia/d-7041514/argentina-vs-uruguay-diwarnai-ribut-ribut-lionel-messi-dkk-kalah-0-2">Argentina Vs Uruguay: Diwarnai Ribut-ribut, Lionel Messi dkk kalah 0-2</a>
                                     <p class="m-0">Dolor lorem eos dolor duo et eirmod sea. Dolor sit magna
                                         rebum clita rebum dolor stet amet justo</p>
                                 </div>
@@ -162,14 +170,14 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative mb-3">
-                                <img class="img-fluid w-100" src="img/news-700x435-2.jpg" style="object-fit: cover;">
+                                <img class="img-fluid w-100" src="imgg/bola/u17.jpeg" style="object-fit: cover;">
                                 <div class="bg-white border border-top-0 p-4">
                                     <div class="mb-2">
                                         <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                            href="">Business</a>
-                                        <a class="text-body" href=""><small>Jan 01, 2045</small></a>
+                                            href="">Football News</a>
+                                        <a class="text-body" href=""><small>Nov 17, 2023</small></a>
                                     </div>
-                                    <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
+                                    <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold" href="https://sport.detik.com/sepakbola/liga-indonesia/d-7042425/penilaian-erick-thohir-pada-timnas-u-17">Penilaian erick thohir pada Timnas U-17 Usai kekalahan kemarin</a>
                                     <p class="m-0">Dolor lorem eos dolor duo et eirmod sea. Dolor sit magna
                                         rebum clita rebum dolor stet amet justo</p>
                                 </div>
@@ -190,14 +198,14 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative mb-3">
-                                <img class="img-fluid w-100" src="img/news-700x435-3.jpg" style="object-fit: cover;">
+                                <img class="img-fluid w-100" src="imgg/bola/belligoal.jpg" style="object-fit: cover;">
                                 <div class="bg-white border border-top-0 p-4">
                                     <div class="mb-2">
                                         <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                            href="">Business</a>
-                                        <a class="text-body" href=""><small>Jan 01, 2045</small></a>
+                                            href="">Football News</a>
+                                        <a class="text-body" href=""><small>Nov 17, 2023</small></a>
                                     </div>
-                                    <a class="h4 d-block mb-0 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
+                                    <a class="h4 d-block mb-0 text-secondary text-uppercase font-weight-bold" href="https://www.bola.net/spanyol/selamat-jude-bellingham-raih-penghargaan-golden-boy-2023-19158e.html#:~:text=Bola.net%20%2D%20Gelandang%20Real%20Madrid,17%2F11%2F2023).">Gelandang Real Madrid, Jude Bellingham, berhasil memenangkan penghargaan Golden Boy 2023...</a>
                                 </div>
                                 <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
                                     <div class="d-flex align-items-center">
@@ -213,14 +221,14 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative mb-3">
-                                <img class="img-fluid w-100" src="img/news-700x435-4.jpg" style="object-fit: cover;">
+                                <img class="img-fluid w-100" src="imgg/bola/2.jpeg" style="object-fit: cover;">
                                 <div class="bg-white border border-top-0 p-4">
                                     <div class="mb-2">
                                         <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                            href="">Business</a>
-                                        <a class="text-body" href=""><small>Jan 01, 2045</small></a>
+                                            href="">Football News</a>
+                                        <a class="text-body" href=""><small>19 Nov 2023</small></a>
                                     </div>
-                                    <a class="h4 d-block mb-0 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
+                                    <a class="h4 d-block mb-0 text-secondary text-uppercase font-weight-bold" href="https://sport.detik.com/sepakbola/liga-inggris/d-7045171/klub-premier-league-ini-siap-gaet-bellingham-bulan-januari-nanti">klub premier league ini siap gaet bellingham bulan januari nanti</a>
                                 </div>
                                 <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
                                     <div class="d-flex align-items-center">
@@ -239,7 +247,7 @@
                                 <img class="img-fluid" src="img/news-110x110-1.jpg" alt="">
                                 <div class="w-100 h-100 px-3 d-flex flex-column justify-content-center border border-left-0">
                                     <div class="mb-2">
-                                        <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Business</a>
+                                        <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Football News</a>
                                         <a class="text-body" href=""><small>Jan 01, 2045</small></a>
                                     </div>
                                     <a class="h6 m-0 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
@@ -249,7 +257,7 @@
                                 <img class="img-fluid" src="img/news-110x110-2.jpg" alt="">
                                 <div class="w-100 h-100 px-3 d-flex flex-column justify-content-center border border-left-0">
                                     <div class="mb-2">
-                                        <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Business</a>
+                                        <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Football News</a>
                                         <a class="text-body" href=""><small>Jan 01, 2045</small></a>
                                     </div>
                                     <a class="h6 m-0 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
@@ -261,7 +269,7 @@
                                 <img class="img-fluid" src="img/news-110x110-3.jpg" alt="">
                                 <div class="w-100 h-100 px-3 d-flex flex-column justify-content-center border border-left-0">
                                     <div class="mb-2">
-                                        <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Business</a>
+                                        <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Football News</a>
                                         <a class="text-body" href=""><small>Jan 01, 2045</small></a>
                                     </div>
                                     <a class="h6 m-0 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
@@ -271,7 +279,7 @@
                                 <img class="img-fluid" src="img/news-110x110-4.jpg" alt="">
                                 <div class="w-100 h-100 px-3 d-flex flex-column justify-content-center border border-left-0">
                                     <div class="mb-2">
-                                        <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Business</a>
+                                        <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Football News</a>
                                         <a class="text-body" href=""><small>Jan 01, 2045</small></a>
                                     </div>
                                     <a class="h6 m-0 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
@@ -284,16 +292,16 @@
                         <div class="col-lg-12">
                             <div class="row news-lg mx-0 mb-3">
                                 <div class="col-md-6 h-100 px-0">
-                                    <img class="img-fluid h-100" src="img/news-700x435-5.jpg" style="object-fit: cover;">
+                                    <img class="img-fluid h-100" src="imgg/bola/3.jpeg" style="object-fit: cover;">
                                 </div>
                                 <div class="col-md-6 d-flex flex-column border bg-white h-100 px-0">
                                     <div class="mt-auto p-4">
                                         <div class="mb-2">
                                             <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                                href="">Business</a>
-                                            <a class="text-body" href=""><small>Jan 01, 2045</small></a>
+                                                href="">Football News</a>
+                                            <a class="text-body" href=""><small>18 Nov 2023</small></a>
                                         </div>
-                                        <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
+                                        <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold" href="https://sport.detik.com/sepakbola/liga-indonesia/d-7044204/daftar-lengkap-16-negara-di-babak-16-besar-piala-dunia-u-17">Daftar Lengkap 16 Negara di Babak 16 Besar Piala Dunia U-17</a>
                                         <p class="m-0">Dolor lorem eos dolor duo et eirmod sea. Dolor sit magna
                                             rebum clita rebum dolor stet amet justo</p>
                                     </div>
@@ -315,7 +323,7 @@
                                 <img class="img-fluid" src="img/news-110x110-1.jpg" alt="">
                                 <div class="w-100 h-100 px-3 d-flex flex-column justify-content-center border border-left-0">
                                     <div class="mb-2">
-                                        <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Business</a>
+                                        <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Football News</a>
                                         <a class="text-body" href=""><small>Jan 01, 2045</small></a>
                                     </div>
                                     <a class="h6 m-0 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
@@ -325,7 +333,7 @@
                                 <img class="img-fluid" src="img/news-110x110-2.jpg" alt="">
                                 <div class="w-100 h-100 px-3 d-flex flex-column justify-content-center border border-left-0">
                                     <div class="mb-2">
-                                        <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Business</a>
+                                        <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Football News</a>
                                         <a class="text-body" href=""><small>Jan 01, 2045</small></a>
                                     </div>
                                     <a class="h6 m-0 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
@@ -337,7 +345,7 @@
                                 <img class="img-fluid" src="img/news-110x110-3.jpg" alt="">
                                 <div class="w-100 h-100 px-3 d-flex flex-column justify-content-center border border-left-0">
                                     <div class="mb-2">
-                                        <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Business</a>
+                                        <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Football News</a>
                                         <a class="text-body" href=""><small>Jan 01, 2045</small></a>
                                     </div>
                                     <a class="h6 m-0 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
@@ -347,7 +355,7 @@
                                 <img class="img-fluid" src="img/news-110x110-4.jpg" alt="">
                                 <div class="w-100 h-100 px-3 d-flex flex-column justify-content-center border border-left-0">
                                     <div class="mb-2">
-                                        <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Business</a>
+                                        <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Football News</a>
                                         <a class="text-body" href=""><small>Jan 01, 2045</small></a>
                                     </div>
                                     <a class="h6 m-0 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
@@ -398,7 +406,7 @@
                             <h4 class="m-0 text-uppercase font-weight-bold">Advertisement</h4>
                         </div>
                         <div class="bg-white text-center border border-top-0 p-3">
-                            <a href=""><img class="img-fluid" src="img/news-800x500-2.jpg" alt=""></a>
+                            <a href=""><img class="img-fluid" src="imgg/bola/lionel-messi-1_169.jpeg" alt=""></a>
                         </div>
                     </div>
                     <!-- Ads End -->
@@ -602,10 +610,10 @@
         </div>
     </div>
     <div class="container-fluid py-4 px-sm-3 px-md-5" style="background: #111111;">
-        <p class="m-0 text-center">&copy; <a href="#">Your Site Name</a>. All Rights Reserved. 
+        <!-- <p class="m-0 text-center">&copy; <a href="#">Your Site Name</a>. All Rights Reserved.  -->
 		
 		<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-		Design by <a href="https://htmlcodex.com">HTML Codex</a></p>
+		<!-- Design by <a href="https://htmlcodex.com">HTML Codex</a></p> -->
     </div>
     <!-- Footer End -->
 
