--- a/form login dan registrasi-biru/index.html
+++ b/form login dan registrasi-biru/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="signup-link">Buat akun <a href="">Daftar sekarang</a></div>
           </form>
-          <form action="#" class="signup">
+          <form action="index.html" class="signup">
             <div class="field">
               <input type="text" placeholder="Masukan Nama" required>
             </div>
