--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <a class="nav-link text-body small" href="#">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-body small" href="#">Login</a>
+                            <a class="nav-link text-body small" href="form login dan registrasi-biru/index.html">Login</a>
                         </li>
                     </ul>
                 </nav>
