--- a/index.html
+++ b/index.html
@@ -327,10 +327,10 @@
                                 <div class="overlay">
                                     <div class="mb-2">
                                         <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                            href="">Denmark Open 2023</a>
+                                            href="">Badminton</a>
                                         <a class="text-white" href=""><small>19 November 2023</small></a>
                                     </div>
-                                    <a class="h6 m-0 text-white text-uppercase font-weight-semi-bold" href="https://www.bolasport.com/read/313949011/jadwal-siaran-langsung-china-masters-2023-momentum-tepat-fajarrian-akhiri-krisis-ganda-putra-indonesia">Jadwal Siaran Langsung China Masters 2023 - Momentum Tepat Fajar/Rian Akhiri Krisis Ganda Putra Indonesia</a>
+                                    <a class="h6 m-0 text-white text-uppercase font-weight-semi-bold" href="https://www.bolasport.com/read/313949011/jadwal-siaran-langsung-china-masters-2023-momentum-tepat-fajarrian-akhiri-krisis-ganda-putra-indonesia">Jadwal Siaran Langsung...</a>
                                 </div>
                             </div>
                             <div class="position-relative overflow-hidden" style="height: 300px;">
@@ -338,10 +338,10 @@
                                 <div class="overlay">
                                     <div class="mb-2">
                                         <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                        href="">Kumamoto Masters 2023</a>
+                                        href="">Badminton</a>
                                         <a class="text-white" href=""><small>19 November 2023</small></a>
                                     </div>
-                                    <a class="h6 m-0 text-white text-uppercase font-weight-semi-bold" href="https://www.bolasport.com/read/313948922/rekap-hasil-final-kumamoto-masters-2023-gregoria-dan-viktor-axelsen-kompak-gagalkan-sapu-bersih-skuad-china">Rekap Hasil Final Kumamoto Masters 2023 - Gregoria dan Viktor Axelsen Kompak Gagalkan Sapu Bersih Skuad China</a>
+                                    <a class="h6 m-0 text-white text-uppercase font-weight-semi-bold" href="https://www.bolasport.com/read/313948922/rekap-hasil-final-kumamoto-masters-2023-gregoria-dan-viktor-axelsen-kompak-gagalkan-sapu-bersih-skuad-china">Rekap Hasil Final Kumamoto...</a>
                                 </div>
                             </div>
                             <div class="position-relative overflow-hidden" style="height: 300px;">
@@ -349,10 +349,10 @@
                                 <div class="overlay">
                                     <div class="mb-2">
                                         <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                        href="">Kumamoto Masters 2023</a>
+                                        href="">Badminton</a>
                                         <a class="text-white" href=""><small>19 November 2023</small></a>
                                     </div>
-                                    <a class="h6 m-0 text-white text-uppercase font-weight-semi-bold" href="https://www.bolasport.com/read/313948848/final-kumamoto-masters-2023-resep-jitu-gregoria-hingga-mampu-putus-tren-buruk-atas-tunggal-putri-nomor-wahid-china">Final Kumamoto Masters 2023 - Resep Jitu Gregoria hingga Mampu Putus Tren Buruk Atas Tunggal Putri Nomor Wahid China</a>
+                                    <a class="h6 m-0 text-white text-uppercase font-weight-semi-bold" href="https://www.bolasport.com/read/313948848/final-kumamoto-masters-2023-resep-jitu-gregoria-hingga-mampu-putus-tren-buruk-atas-tunggal-putri-nomor-wahid-china">Final Kumamoto Masters...</a>
                                 </div>
                             </div>
                             <div class="position-relative overflow-hidden" style="height: 300px;">
@@ -360,10 +360,10 @@
                                 <div class="overlay">
                                     <div class="mb-2">
                                         <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                        href="">Kumamoto Masters 2023</a>
+                                        href="">Badminton</a>
                                         <a class="text-white" href=""><small> 19 November 2023 </small></a>
                                     </div>
-                                    <a class="h6 m-0 text-white text-uppercase font-weight-semi-bold" href="https://www.bolasport.com/read/313948875/hasil-final-kumamoto-masters-2023-ikuti-jejak-gregoria-axelsen-bikin-china-ambyar-di-sektor-tunggal">Hasil Final Kumamoto Masters 2023 - Ikuti Jejak Gregoria, Axelsen Bikin China Ambyar di Sektor Tunggal</a>
+                                    <a class="h6 m-0 text-white text-uppercase font-weight-semi-bold" href="https://www.bolasport.com/read/313948875/hasil-final-kumamoto-masters-2023-ikuti-jejak-gregoria-axelsen-bikin-china-ambyar-di-sektor-tunggal">Hasil Final Kumamoto...</a>
                                 </div>
                             </div>
                             <div class="position-relative overflow-hidden" style="height: 300px;">
@@ -371,10 +371,10 @@
                                 <div class="overlay">
                                     <div class="mb-2">
                                         <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                        href="">https://www.bolasport.com/read/313948175/final-kumamoto-masters-2023-momentum-emas-gregoria-akhiri-rekor-buruk-lawan-juara-olimpiade</a>
+                                        href="https://www.bolasport.com/read/313948175/final-kumamoto-masters-2023-momentum-emas-gregoria-akhiri-rekor-buruk-lawan-juara-olimpiade">Badminton</a>
                                         <a class="text-white" href="https://www.bolasport.com/read/313948175/final-kumamoto-masters-2023-momentum-emas-gregoria-akhiri-rekor-buruk-lawan-juara-olimpiade"><small>18 November 2023</small></a>
                                     </div>
-                                    <a class="h6 m-0 text-white text-uppercase font-weight-semi-bold" href="">Final Kumamoto Masters 2023 - Momentum Emas Gregoria Akhiri Rekor Buruk Lawan Juara Olimpiade</a>
+                                    <a class="h6 m-0 text-white text-uppercase font-weight-semi-bold" href="">Momentum Emas Gregoria...</a>
                                 </div>
                             </div>
                         </div>
