--- a/index.html
+++ b/index.html
@@ -31,15 +31,12 @@
         <div class="row align-items-center bg-dark px-lg-5">
             <div class="col-lg-9">
                 <nav class="navbar navbar-expand-sm bg-dark p-0">
-                    <ul class="navbar-nav ml-n2">
+                    <ul class="navbar-nav ml-n2">  
                         <li class="nav-item border-right border-secondary">
-                            <a class="nav-link text-body small" href="#">Monday, January 1, 2045</a>
+                            <a class="nav-link text-body small" href="index.html">Home</a>
                         </li>
                         <li class="nav-item border-right border-secondary">
-                            <a class="nav-link text-body small" href="#">Advertise</a>
-                        </li>
-                        <li class="nav-item border-right border-secondary">
-                            <a class="nav-link text-body small" href="#">Contact</a>
+                            <a class="nav-link text-body small" href="contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-body small" href="form login dan registrasi-biru/index.html">Login</a>
